<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:background="@android:color/white"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">
        <TextView
            android:id="@+id/tv_checkPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkPhone"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ACACAC"/>
        <TextView
            android:id="@+id/tv_openAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/openAccount"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ACACAC"/>
        <TextView
            android:id="@+id/tv_openConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/openConfirm"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ACACAC"/>
        </LinearLayout>
    <View android:layout_width="match_parent" android:layout_height="1dp"
        android:background="#E3E3E3"/>
</LinearLayout>