<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_openaccount">
    <include layout="@layout/view_account_open_progress"></include>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <!--RelativeLayout设置了android:layout_height="50dp"，要使TextView中的文字垂直居中
         TextView如果设置为：  android:layout_height="wrap_content"，则android:layout_centerVertical="true"
         TextView如果设置为：  android:layout_height="match_parent"，则 android:gravity="center"
        -->


        <!--如果父控件设置了背景色：android:background="@color/background_openaccount"
        子控件没设置则默认为透明的，所以，要想子控件的颜色与父控件一致，可以设置子控件的背景为：android:background="@null"
        -->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/tv_phoneNum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/phoneNum"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
            <EditText
                android:id="@+id/et_phoneNum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/tv_phoneNum"
                android:background="@null"/>
        </RelativeLayout>
        <include layout="@layout/view_account_open_divider"></include>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/tv_vertifivationCode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/vertificationCode"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
            <TextView
                android:id="@+id/tv_sendVertificationcode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/shape_roundcorner_red"
                android:text="@string/sendVertificationcode"
               />
            <EditText
                android:id="@+id/et_vertifivationCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/tv_vertifivationCode"
                android:layout_toLeftOf="@id/tv_sendVertificationcode"
                android:background="@null"/>
        </RelativeLayout>
        <include layout="@layout/view_account_open_divider"></include>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/tv_recommandPerson"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/recommandPerson"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
            <EditText
                android:id="@+id/et_recommandPerson"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/tv_recommandPerson"
                android:background="@null"/>
        </RelativeLayout>
        <include layout="@layout/view_account_open_divider"></include>
        </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_area_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#E2E2E2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#FBFADC"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/red_openaccount"
                android:gravity="center_vertical"
                android:text="收不到验证码?"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#7C7C77"
                android:gravity="center_vertical"
                android:text="方法一：用当前手机拨打“95571”，然后按“8”，查询验证码"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#7C7C77"
                android:gravity="center_vertical"
                android:text="方法二：用当前手机编辑短信“88”至“95571”，发送成功后等待1分钟，无需填写验证码，直接进入“下一步”"/>
            </LinearLayout>
        </RelativeLayout>
    <TextView
        android:id="@+id/tv_next"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:background="@drawable/shape_roundcorner_red"
        android:textSize="20sp"
        android:text="下一步"
        android:clickable="true"/>
</LinearLayout>